2005-09-06  Seth Burgess <sjburges@gimp.org>
	* Gimp.pm: add a Context pseudoclass.  Change first match for Layer pseudoclass to be 
	  gimp_drawable_ instead of gimp_layer_, because gimp_layer_* is largely deprecated now.
	* examples/billboard: use new Context pseudoclass, and other fix above.

2005-09-06  Seth Burgess <sjburges@gimp.org>
	* config.pl
	* Makefile.PL: no longer use autoconf (configure) to determine things; use 
	  ExtUtils::PkgConfig and gimptool instead.

	* Gimp/Lib.xs: have first parameter name checked for either "run_mode" or
	  "run-mode" when deciding to automagically set the GIMP_RUN_NONINTERACTIVE (if
	  not set otherwise).  Lets all the tests pass now!

2005-05-12  Carol Spears <carol@gimp.org>
	* examples/glowing_steel: changed deprecated pdb calls. 
	* examples/glowing_steel: even though Procedure Browser reports mblur needing only
          optional center_x and center_y FLOAT, it complains and stops unless it gets them.
          I fed 0,0 to the script. 

2005-04-03  Carol Spears <carol@gimp.org>
	* examples/burst: changed deprecated pdb calls. 
	* examples/sethspin: changed deprecated pdb calls, including changing
          gimp-rotate to a much longer name that also wanted new information and
          in a different order.  removed the -1 to the progress_init to stop those
          pop-ups. 

2004-07-30  Seth Burgess <sjburges@gimp.org>
	* Gimp/Lib.xs: fixup longstanding bug of not being able to 
	               use RUN_NONINTERACTIVE
	* t/run.t: reenabled the test that uses this

2004-07-21  Seth Burgess <sjburges@gimp.org>
	* TODO: added some items
	* Gimp.pm: pod cleanup and reorg
	* Gimp/Fu.pm: bit of pod cleanup

2004-06-28  Seth Burgess <sjburges@gimp.org>
	* UI/UI.xs: fixed an XS error that shows up for GCC 2.95; 
          shouldn't create a temp variable in CODE: - put it in PREINIT:
          Reported by Marc 'HE' Brockschmidt <he@debian.org>.
          Fixed a typo in GradientSelect.
        